apps/rendered/prod/home-assistant.yaml
---
# Source: home-assistant/charts/Whisper/templates/whisper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisper
spec:
  ports:
    - name: "10300"
      port: 10300
      targetPort: 10300
---
# Source: home-assistant/charts/home-assistant/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    helm.sh/chart: home-assistant-0.3.30
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/version: "2025.11.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
---
# Source: home-assistant/charts/mqtt-broker/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app.kubernetes.io/instance: home-assistant
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
    - name: websocket
      port: 9001
      targetPort: websocket
---
# Source: home-assistant/charts/piper/templates/piper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: piper
spec:
  ports:
    - name: "10200"
      port: 10200
      targetPort: 10200
---
# Source: home-assistant/charts/Whisper/templates/whisper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper
spec:
  replicas: 1
  strategy:
    type: Recreate

  # REQUIRED
  selector:
    matchLabels:
      app: whisper

  template:
    metadata:
      # REQUIRED — must match selector
      labels:
        app: whisper

    spec:
      containers:
        - args:
            - --model
            - base-int8
            - --language
            - en
          image: rhasspy/wyoming-whisper:latest
          name: whisper
          ports:
            - containerPort: 10300
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: whisper-claim0
      restartPolicy: Always
      volumes:
        - name: whisper-claim0
          emptyDir:
            sizeLimit: 500Mi
---
# Source: home-assistant/charts/govee2mqtt/templates/govee2mqtt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: govee2mqtt
spec:
  replicas: 1

  # REQUIRED
  selector:
    matchLabels:
      app: govee2mqtt

  template:
    metadata:
      # REQUIRED — must match selector
      labels:
        app: govee2mqtt
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - image: ghcr.io/wez/govee2mqtt:latest
          name: govee2mqtt
          ports:
            - name: lanapi
              containerPort: 4002
              protocol: UDP
              hostPort: 4002
      restartPolicy: Always
---
# Source: home-assistant/charts/mqtt-broker/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app.kubernetes.io/instance: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: "eclipse-mosquitto:2.0.18"
          imagePullPolicy: IfNotPresent
          ports:
            - name: mqtt
              containerPort: 1883
            - name: websocket
              containerPort: 9001
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
---
# Source: home-assistant/charts/piper/templates/piper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piper
spec:
  replicas: 1
  strategy:
    type: Recreate

  # REQUIRED
  selector:
    matchLabels:
      app: piper

  template:
    metadata:
      # REQUIRED — must match selector
      labels:
        app: piper

    spec:
      containers:
        - args:
            - --voice
            - en-gb-southern_english_female-low
          image: rhasspy/wyoming-piper:latest
          name: piper
          ports:
            - containerPort: 10200
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: piper-claim0
      restartPolicy: Always
      volumes:
        - name: piper-claim0
          emptyDir:
            sizeLimit: 500Mi
---
# Source: home-assistant/charts/home-assistant/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
  labels:
    helm.sh/chart: home-assistant-0.3.30
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/version: "2025.11.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  serviceName: home-assistant
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
      app.kubernetes.io/instance: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/instance: home-assistant
      annotations:
        checksum/init-script: 490d99caab61d7092d315426ebaed17a827b88b2ad4e82ee1b568226ebb62b14
        checksum/hass-configuration: 24e473b916085ad398aa2945119700d726c3a6814c503170bdaa366988a3cd4a
    spec:
      serviceAccountName: home-assistant
      securityContext:
        {}
      containers:
        - name: home-assistant
          securityContext:
            {}
          image: "ghcr.io/home-assistant/home-assistant:2025.11.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
          - mountPath: /config
            name: home-assistant
      volumes:
      - name: init-volume
        configMap:
          name: init-script
      - name: config-volume
        configMap:
          name: hass-configuration
      - name: home-assistant
        emptyDir: {}
---
# Source: home-assistant/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: home-assistant-gateway
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: openbao-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - hostname: ha.homelab.lan
      name: home-assistant-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
        - kind: Secret
          name: ha-tls
        mode: Terminate
---
# Source: home-assistant/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: home-assistant
spec:
  parentRefs:
    - name: home-assistant-gateway
  hostnames:
    - ha.homelab.lan
  rules:
    - backendRefs:
      - name: home-assistant
        port: 8080
      matches:
      - path:
          type: PathPrefix
          value: /
---
# Source: home-assistant/charts/home-assistant/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "home-assistant-test-connection"
  labels:
    helm.sh/chart: home-assistant-0.3.30
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/version: "2025.11.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['home-assistant:8080']
  restartPolicy: Never
